--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,28 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+  	<plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2</version>
+          <executions>
+            <execution>
+              <goals>
+		<goal>exec</goal>
+              </goals>
+            </execution>
+	  </executions>
+          <configuration>
+            <executable>deploy.sh</executable>
+            <mainClass>uk.co.brotherlogic.twitter.TwitterCore</mainClass>
+          </configuration>
+	</plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+
 </project>
